2006-06-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_get_tab_widget): set
	the event box' window invisible so we get the right background
	with all themes.

2006-06-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c: Fix sporadic crash
	resulting from previous change.
	
2006-06-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c: As suggested by Joao,
	halt tool on changes to selection or image size.
	
2006-06-14  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/vinvert.c: another patch from Mukund that cleans
	up i18n initialization.

2006-06-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpbycolorselect.c: fix crash when changing
	threshold with no display active.
	
2006-06-14  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c: use radio items for the Image mode
	as suggested in bug #344871.

	* app/actions/image-commands.[ch] (image_convert_cmd_callback):
	changed accordingly.

2006-06-14  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/[many].pdb: in help texts, refer to other
	procedures using_c_syntax(). This way gtk-doc can cross-reference
	them correctly in libgimp, and app.pl will transform them
	'to-canonical-names' for PDB registering.

	* app/pdb/[many]_cmds.c
	* libgimp/[many]_pdb.c: regenerated.

2006-06-13  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpbycolorselect.[ch]: allow modifying threshold
	without having to re-click on image each time.  Fixes
	bug #126748.
	
2006-06-13  Tor Lillqvist  <tml@novell.com>

	* app/plug-in/gimpenvirontable.c (gimp_environ_table_populate):
	Free the string vector returned by g_listenv().

	* libgimpwidgets/gimpwidgets.def: Remove deprecated
	gimp_prop_file_entry_new.

2006-06-13  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* menus/image-menu.xml.in: remove strong/weak undo from menu;
	still available using Shift-Ctrl-[ZY].  See bug #144854.
